--- a/coderGL做个好玩的练手小项目/css/login.css
+++ b/coderGL做个好玩的练手小项目/css/login.css
@@ -1,14 +1,15 @@
 .container
 {
+	position: relative;
 	margin: 0 auto;
-	margin-top: 30%;
+	top: 11.25rem;
 }
 
 .input-header
 {
 	display: inline-block;
-	width: 20px;
-	height: 20px;
+	width: 1.5rem;
+	height: 1.5rem;
 	position: relative; 
 }
 
@@ -20,41 +21,43 @@
 
 .input-group-login img
 {
-	top:6px;
+	top:;
+	top:0.375rem;
 }
 
 .input-group-login input[type="text"]
 {
-	width: 60%;
-	height: 20px;
-	border: 1px solid #3CA9C4;
-	border-radius: 8px;
+	width: 16.375rem;
+	height: 1.25rem;
+	border: 0.0625rem solid #3CA9C4;
+	border-radius: 0.5rem;
 }
 
 .input-group-login input[type="text"]:focus{
-	box-shadow: 10px 10px 5px #888888;
+	box-shadow: 0.625rem 0.625rem 0.3125rem #888888;
 }
 
 .login-btn-container
 {
-	width: 100%;
+	width: 20rem;
+	margin: 0 auto;
 }
 
 .login-btn
 {
-	width: 30%;
-	height: 20px;
-	line-height: 22px;
-	font-size: 12px;
+	width: 6rem;
+	height: 1.25rem;
+	line-height: 1.375rem;
+	font-size: 0.75rem;
 	border: 1px solid #3CA9C4;
-	/*margin: 0 auto;*/
+	
 	text-align: center;
-	border-radius: 8px;
-	margin-top: 10px;
+	border-radius: 0.5rem;
+	margin-top: 0.625rem;
 	display: inline-block;
 	float: left;
 	
-	position: absolute;
+	position: relative;
 	 -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
@@ -62,16 +65,16 @@
 
 .login-user
 {
-	left: 15%;
+	left: 3rem;
 }
 
 .obtain-vertify
 {
-	left: 55%;
+	left: 6rem;
 }
 
 .center-vertical{
-	padding-top: 3px;
-	padding-bottom: 3px;
+	padding-top: 0.1875rem;
+	padding-bottom: 0.1875rem;
 }
 
